# unity-mcp

./: .dockerignore  .gitignore  .mcpbignore  CLAUDE.md  README.md  docker-compose.yml  manifest.json  mcp_source.py
Server/: DOCKER_OVERVIEW.md  Dockerfile  README.md  pyproject.toml
Server/src/: __init__.py  main.py
Server/src/cli/: CLI_USAGE_GUIDE.md  __init__.py  main.py
Server/src/core/: config.py  constants.py  logging_decorator.py  telemetry.py  telemetry_decorator.py
Server/src/models/: __init__.py  models.py  unity_response.py
Server/src/services/: api_key_service.py  custom_tool_service.py
Server/src/transport/: models.py  plugin_hub.py  plugin_registry.py  unity_instance_middleware.py  unity_transport.py
Server/src/utils/: focus_nudge.py  module_discovery.py
Server/tests/: conftest.py  test_cli.py  test_cli_commands_characterization.py  test_core_infrastructure_characterization.py  test_custom_tool_service_user_scope.py  test_execute_code.py  test_focus_nudge.py  test_manage_animation.py  test_manage_build.py  test_manage_camera.py  test_manage_editor.py  test_manage_graphics.py  test_manage_packages.py  test_manage_physics.py  test_manage_prefabs.py  test_manage_probuilder.py  test_manage_profiler.py  test_manage_scene.py  test_manage_vfx_actions.py  test_models_characterization.py  test_param_normalizer.py  test_tool_registry_metadata.py  test_transport_characterization.py  test_unity_docs.py  test_unity_reflect.py
Server/tests/integration/: conftest.py  test_api_key_service.py  test_auth_config_startup.py  test_debug_request_context_diagnostics.py  test_domain_reload_resilience.py  test_edit_normalization_and_noop.py  test_edit_strict_and_warnings.py  test_editor_state_v2_contract.py  test_external_changes_scanner.py  test_find_gameobjects.py  test_gameobject_resources.py  test_get_sha.py  test_helpers.py  test_improved_anchor_matching.py  test_inline_unity_instance.py  test_instance_autoselect.py  test_instance_routing_comprehensive.py  test_instance_targeting_resolution.py  test_json_parsing_simple.py  test_logging_stdout.py  test_manage_asset_json_parsing.py  test_manage_asset_param_coercion.py  test_manage_components.py  test_manage_gameobject_is_static.py  test_manage_gameobject_look_at.py  test_manage_gameobject_param_coercion.py  test_manage_scene_paging_params.py  test_manage_script_uri.py  test_manage_scriptable_object_tool.py  test_manage_texture.py  test_manage_ui.py  test_middleware_auth_integration.py  test_plugin_hub_websocket_auth.py  (+19 more)
(+310 files in other folders)
